--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ springdoc.swagger-ui.path=/swagger.html
 #Habiliar o deshabilitar swagger  false o true
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
+
+# Habilita el reinicio automático
+spring.devtools.restart.enabled=true
